<?xml version="1.0" encoding="UTF-8"?>
<project xmlns="http://maven.apache.org/POM/4.0.0"
         xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
    <modelVersion>4.0.0</modelVersion>

    <parent>
        <groupId>dev.resteasy.tools</groupId>
        <artifactId>resteasy-parent</artifactId>
        <version>3</version>
        <relativePath/>
    </parent>

    <groupId>io.weli</groupId>
    <artifactId>java-snippets</artifactId>
    <version>1.0-SNAPSHOT</version>

    <!--    <build>-->
    <!--        <plugins>-->
    <!--            <plugin>-->
    <!--                <groupId>org.apache.maven.plugins</groupId>-->
    <!--                <artifactId>maven-compiler-plugin</artifactId>-->
    <!--                <configuration>-->
    <!--                    <source>19</source>-->
    <!--                    <target>19</target>-->
    <!--                </configuration>-->
    <!--            </plugin>-->
    <!--        </plugins>-->
    <!--    </build>-->

    <properties>
        <commons-beanutils.ver>1.11.0</commons-beanutils.ver>
        <dep.assertj.ver>3.27.7</dep.assertj.ver>
        <dep.bouncycastle.version>1.70</dep.bouncycastle.version>
        <dep.guice.ver>7.0.0</dep.guice.ver>
        <dep.jackson-core.version>2.20.1</dep.jackson-core.version>
        <dep.jackson-databind.version>2.20.1</dep.jackson-databind.version>
        <dep.jaxb-impl.version>4.0.6</dep.jaxb-impl.version>
        <dep.jetty.version>3.2.10.Final</dep.jetty.version>
        <dep.jgroups.version>5.5.1.Final</dep.jgroups.version>
        <dep.junit.ver>6.0.1</dep.junit.ver>
        <dep.junit.platform.ver>6.0.1</dep.junit.platform.ver>
        <dep.sisu.ver>0.3.5</dep.sisu.ver>
        <dep.testng.ver>7.11.0</dep.testng.ver>
        <graaljs.version>25.0.1</graaljs.version>
        <lombok.ver>1.18.42</lombok.ver>
        <java_level>25-ea+12</java_level>
        <maven.compiler.source>21</maven.compiler.source>
        <maven.compiler.target>21</maven.compiler.target>
        <!--        https://stackoverflow.com/questions/38882080/specifying-java-version-in-maven-differences-between-properties-and-compiler-p-->
        <maven.compiler.release>21</maven.compiler.release>
        <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
        <resteasy.ver>7.0.0.Final</resteasy.ver>
        <rx.java.jdbc.version>0.7.11</rx.java.jdbc.version>
        <rxjava.ver>3.1.12</rxjava.ver>
        <springboot.version>4.0.0</springboot.version>
        <version.langchain>0.36.2</version.langchain>
        <version.org.python.jython>2.7.4</version.org.python.jython>
        <yasson.ver>3.0.4</yasson.ver>
        <javafx.plugin.version>0.0.8</javafx.plugin.version>
        <ver.mapstruct>1.6.3</ver.mapstruct>
        <lombok.mapstruct.ver>0.2.0</lombok.mapstruct.ver>
        <!-- New version properties -->
        <dep.postgresql.version>42.7.8</dep.postgresql.version>
        <dep.jboss-vfs.version>3.3.2.Final</dep.jboss-vfs.version>
        <dep.antlr4.version>4.13.2</dep.antlr4.version>
        <dep.javacpp.version>1.5.12</dep.javacpp.version>
        <dep.cglib.version>3.3.0</dep.cglib.version>
        <dep.htmlparser.version>2.1</dep.htmlparser.version>
        <dep.rest-assured.version>5.5.6</dep.rest-assured.version>
        <dep.json-schema-validator.version>5.5.6</dep.json-schema-validator.version>
        <dep.hamcrest.version>3.0</dep.hamcrest.version>
        <dep.jna.version>5.18.1</dep.jna.version>
        <dep.commons-compress.version>1.28.0</dep.commons-compress.version>
        <dep.commons-io.version>2.21.0</dep.commons-io.version>
        <dep.huggingface-tokenizers.version>0.35.0</dep.huggingface-tokenizers.version>
        <dep.javafx-controls.version>25-ea+18</dep.javafx-controls.version>
        <dep.javafx-graphics.version>25-ea+20</dep.javafx-graphics.version>
        <dep.javafx-base.version>25-ea+17</dep.javafx-base.version>
        <dep.maven-surefire-plugin.version>3.5.4</dep.maven-surefire-plugin.version>
        <dep.reactor.version>3.8.0</dep.reactor.version>
        <dep.mutiny.version>3.0.3</dep.mutiny.version>
        <dep.jboss-logmanager.version>3.1.2.Final</dep.jboss-logmanager.version>
    </properties>

    <distributionManagement>
        <repository>
            <id>github</id>
            <name>weli's java-snippets package</name>
            <url>https://maven.pkg.github.com/liweinan/java-snippets</url>
        </repository>
    </distributionManagement>

    <dependencyManagement>
        <dependencies>
            <dependency>
                <groupId>org.springframework.boot</groupId>
                <artifactId>spring-boot-starter-parent</artifactId>
                <version>${springboot.version}</version>
                <type>pom</type>
                <scope>import</scope>
            </dependency>
        </dependencies>
    </dependencyManagement>

    <dependencies>
        <!--            https://search.maven.org/artifact/io.reactivex.rxjava3/rxjava/3.0.5/jar-->
        <dependency>
            <groupId>io.reactivex.rxjava3</groupId>
            <artifactId>rxjava</artifactId>
            <version>${rxjava.ver}</version>
        </dependency>
        <!-- Consolidated bouncycastle dependency -->
        <dependency>
            <groupId>org.bouncycastle</groupId>
            <artifactId>bcprov-jdk15on</artifactId>
            <version>${dep.bouncycastle.version}</version>
        </dependency>
        <!-- https://mvnrepository.com/artifact/org.eclipse/yasson -->
        <dependency>
            <groupId>org.eclipse</groupId>
            <artifactId>yasson</artifactId>
            <version>${yasson.ver}</version>
        </dependency>
        <!-- https://mvnrepository.com/artifact/org.projectlombok/lombok -->
        <dependency>
            <groupId>org.projectlombok</groupId>
            <artifactId>lombok</artifactId>
            <version>${lombok.ver}</version>
        </dependency>
        <dependency>
            <groupId>com.fasterxml.jackson.core</groupId>
            <artifactId>jackson-core</artifactId>
            <version>${dep.jackson-core.version}</version>
        </dependency>
        <dependency>
            <groupId>com.fasterxml.jackson.core</groupId>
            <artifactId>jackson-databind</artifactId>
            <version>${dep.jackson-databind.version}</version>
        </dependency>
        <dependency>
            <groupId>org.jboss.netty</groupId>
            <artifactId>netty</artifactId>
            <version>${dep.jetty.version}</version>
        </dependency>
        <dependency>
            <groupId>com.sun.xml.bind</groupId>
            <artifactId>jaxb-impl</artifactId>
            <version>${dep.jaxb-impl.version}</version>
        </dependency>
        <dependency>
            <groupId>org.jgroups</groupId>
            <artifactId>jgroups</artifactId>
            <version>${dep.jgroups.version}</version>
        </dependency>
        <!-- https://mvnrepository.com/artifact/org.postgresql/postgresql -->
        <dependency>
            <groupId>org.postgresql</groupId>
            <artifactId>postgresql</artifactId>
            <version>${dep.postgresql.version}</version>
        </dependency>
        <dependency>
            <groupId>org.jboss</groupId>
            <artifactId>jboss-vfs</artifactId>
            <version>${dep.jboss-vfs.version}</version>
        </dependency>
        <dependency>
            <groupId>org.antlr</groupId>
            <artifactId>antlr4-runtime</artifactId>
            <version>${dep.antlr4.version}</version>
        </dependency>
        <dependency>
            <groupId>org.jboss.resteasy</groupId>
            <artifactId>resteasy-core</artifactId>
            <version>${resteasy.ver}</version>
        </dependency>
        <dependency>
            <groupId>org.jboss.resteasy</groupId>
            <artifactId>resteasy-core-spi</artifactId>
            <version>${resteasy.ver}</version>
        </dependency>
        <dependency>
            <groupId>org.jboss.resteasy</groupId>
            <artifactId>resteasy-links</artifactId>
            <version>${resteasy.ver}</version>
        </dependency>
        <dependency>
            <groupId>org.bytedeco</groupId>
            <artifactId>javacpp</artifactId>
            <version>${dep.javacpp.version}</version>
        </dependency>
        <dependency>
            <groupId>cglib</groupId>
            <artifactId>cglib</artifactId>
            <version>${dep.cglib.version}</version>
        </dependency>
        <dependency>
            <groupId>org.springframework.boot</groupId>
            <artifactId>spring-boot-starter-test</artifactId>
            <scope>test</scope>
        </dependency>
        <dependency>
            <groupId>org.testng</groupId>
            <artifactId>testng</artifactId>
            <version>${dep.testng.ver}</version>
            <scope>test</scope>
        </dependency>
        <dependency>
            <groupId>org.junit.jupiter</groupId>
            <artifactId>junit-jupiter</artifactId>
            <version>${dep.junit.ver}</version>
            <scope>test</scope>
        </dependency>
        <dependency>
            <groupId>org.junit.jupiter</groupId>
            <artifactId>junit-jupiter-api</artifactId>
            <version>${dep.junit.ver}</version>
            <scope>test</scope>
        </dependency>
        <dependency>
            <groupId>org.junit.jupiter</groupId>
            <artifactId>junit-jupiter-engine</artifactId>
            <version>${dep.junit.ver}</version>
            <scope>test</scope>
        </dependency>
        <dependency>
            <groupId>org.junit.jupiter</groupId>
            <artifactId>junit-jupiter-params</artifactId>
            <version>${dep.junit.ver}</version>
            <scope>test</scope>
        </dependency>
        <dependency>
            <groupId>org.junit.platform</groupId>
            <artifactId>junit-platform-launcher</artifactId>
            <version>${dep.junit.platform.ver}</version>
            <scope>test</scope>
        </dependency>
        <dependency>
            <groupId>org.junit.platform</groupId>
            <artifactId>junit-platform-reporting</artifactId>
            <version>${dep.junit.platform.ver}</version>
            <scope>test</scope>
        </dependency>
        <dependency>
            <groupId>org.junit.platform</groupId>
            <artifactId>junit-platform-engine</artifactId>
            <version>${dep.junit.platform.ver}</version>
            <scope>test</scope>
        </dependency>
        <dependency>
            <groupId>org.junit.platform</groupId>
            <artifactId>junit-platform-commons</artifactId>
            <version>${dep.junit.platform.ver}</version>
            <scope>test</scope>
        </dependency>
        <dependency>
            <groupId>org.htmlparser</groupId>
            <artifactId>htmlparser</artifactId>
            <version>${dep.htmlparser.version}</version>
        </dependency>
        <dependency>
            <groupId>org.assertj</groupId>
            <artifactId>assertj-core</artifactId>
            <version>${dep.assertj.ver}</version>
            <scope>test</scope>
        </dependency>
        <!-- https://mvnrepository.com/artifact/commons-beanutils/commons-beanutils -->
        <dependency>
            <groupId>commons-beanutils</groupId>
            <artifactId>commons-beanutils</artifactId>
            <version>${commons-beanutils.ver}</version>
        </dependency>
        <dependency>
            <groupId>org.eclipse.sisu</groupId>
            <artifactId>org.eclipse.sisu.inject</artifactId>
            <version>${dep.sisu.ver}</version>
        </dependency>
        <dependency>
            <groupId>com.google.inject</groupId>
            <artifactId>guice</artifactId>
            <version>${dep.guice.ver}</version>
        </dependency>
        <!--        https://bugs.jython.org/issue2355-->
        <dependency>
            <groupId>org.python</groupId>
            <artifactId>jython-standalone</artifactId>
            <version>${version.org.python.jython}</version>
        </dependency>
        <!--        https://golb.hplar.ch/2020/04/java-javascript-engine.html-->
        <!--        https://github.com/oracle/graaljs-->
        <dependency>
            <groupId>org.graalvm.polyglot</groupId>
            <artifactId>polyglot</artifactId>
            <version>${graaljs.version}</version>
        </dependency>
        <dependency>
            <groupId>org.graalvm.polyglot</groupId>
            <artifactId>js</artifactId>
            <version>${graaljs.version}</version>
            <type>pom</type>
        </dependency>
        <dependency>
            <groupId>org.graalvm.js</groupId>
            <artifactId>js-scriptengine</artifactId>
            <version>${graaljs.version}</version>
        </dependency>
        <dependency>
            <groupId>dev.langchain4j</groupId>
            <artifactId>langchain4j</artifactId>
            <version>${version.langchain}</version>
        </dependency>
        <dependency>
            <groupId>dev.langchain4j</groupId>
            <artifactId>langchain4j-ollama</artifactId>
            <version>${version.langchain}</version>
        </dependency>
        <dependency>
            <groupId>dev.langchain4j</groupId>
            <artifactId>langchain4j-embeddings</artifactId>
            <version>${version.langchain}</version>
        </dependency>
        <dependency>
            <groupId>org.openjfx</groupId>
            <artifactId>javafx-controls</artifactId>
            <version>${dep.javafx-controls.version}</version>
        </dependency>
        <dependency>
            <groupId>org.openjfx</groupId>
            <artifactId>javafx-graphics</artifactId>
            <version>${dep.javafx-graphics.version}</version>
        </dependency>
        <dependency>
            <groupId>org.openjfx</groupId>
            <artifactId>javafx-base</artifactId>
            <version>${dep.javafx-base.version}</version>
        </dependency>
        <dependency>
            <groupId>org.mapstruct</groupId>
            <artifactId>mapstruct</artifactId>
            <version>${ver.mapstruct}</version>
        </dependency>
        <!-- REST API Testing -->
        <dependency>
            <groupId>io.rest-assured</groupId>
            <artifactId>rest-assured</artifactId>
            <version>${dep.rest-assured.version}</version>
        </dependency>
        <dependency>
            <groupId>io.rest-assured</groupId>
            <artifactId>json-schema-validator</artifactId>
            <version>${dep.json-schema-validator.version}</version>
        </dependency>
        <dependency>
            <groupId>org.hamcrest</groupId>
            <artifactId>hamcrest</artifactId>
            <version>${dep.hamcrest.version}</version>
        </dependency>
        <dependency>
            <groupId>net.java.dev.jna</groupId>
            <artifactId>jna</artifactId>
            <version>${dep.jna.version}</version>
        </dependency>
        <dependency>
            <groupId>org.apache.commons</groupId>
            <artifactId>commons-compress</artifactId>
            <version>${dep.commons-compress.version}</version>
        </dependency>
        <dependency>
            <groupId>commons-io</groupId>
            <artifactId>commons-io</artifactId>
            <version>${dep.commons-io.version}</version>
        </dependency>
        <dependency>
            <groupId>ai.djl.huggingface</groupId>
            <artifactId>tokenizers</artifactId>
            <version>${dep.huggingface-tokenizers.version}</version>
        </dependency>
        <dependency>
            <groupId>io.projectreactor</groupId>
            <artifactId>reactor-core</artifactId>
            <version>${dep.reactor.version}</version>
        </dependency>
        <dependency>
            <groupId>io.smallrye.reactive</groupId>
            <artifactId>mutiny</artifactId>
            <version>${dep.mutiny.version}</version>
        </dependency>
        <dependency>
            <groupId>org.jboss.logmanager</groupId>
            <artifactId>jboss-logmanager</artifactId>
            <version>${dep.jboss-logmanager.version}</version>
            <scope>test</scope>
        </dependency>
    </dependencies>
    <build>
        <plugins>
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-surefire-plugin</artifactId>
                <version>${dep.maven-surefire-plugin.version}</version>
                <configuration>
                    <argLine>--enable-preview -Xmx512m -Djava.util.concurrent.ForkJoinPool.common.parallelism=1</argLine>
                    <includes>
                        <include>**/*Test.java</include>
                        <include>**/*Tests.java</include>
                    </includes>
                    <testFailureIgnore>false</testFailureIgnore>
                    <printSummary>true</printSummary>
                    <trimStackTrace>false</trimStackTrace>
                    <parallel>none</parallel>
                    <threadCount>1</threadCount>
                    <systemPropertyVariables>
                        <java.util.logging.manager>org.jboss.logmanager.LogManager</java.util.logging.manager>
                    </systemPropertyVariables>
                </configuration>
                <dependencies>
                    <dependency>
                        <groupId>org.junit.jupiter</groupId>
                        <artifactId>junit-jupiter-engine</artifactId>
                        <version>${dep.junit.ver}</version>
                    </dependency>
                </dependencies>
            </plugin>
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-compiler-plugin</artifactId>
                <configuration>
                    <source>${java_level}</source>
                    <target>${java_level}</target>
                    <annotationProcessorPaths>
                        <path>
                            <groupId>org.mapstruct</groupId>
                            <artifactId>mapstruct-processor</artifactId>
                            <version>${ver.mapstruct}</version>
                        </path>
                        <path>
                            <groupId>org.projectlombok</groupId>
                            <artifactId>lombok</artifactId>
                            <version>${lombok.ver}</version>
                        </path>
                        <path>
                            <groupId>org.projectlombok</groupId>
                            <artifactId>lombok-mapstruct-binding</artifactId>
                            <version>${lombok.mapstruct.ver}</version>
                        </path>
                    </annotationProcessorPaths>
                </configuration>
            </plugin>
            <!--            Java 21 is needed-->
            <!--            https://www.baeldung.com/javafx-->
            <!--            https://openjfx.io/openjfx-docs//index.html#maven-->
            <!--            mvn clean javafx:run-->
            <plugin>
                <groupId>org.openjfx</groupId>
                <artifactId>javafx-maven-plugin</artifactId>
                <version>${javafx.plugin.version}</version>
                <configuration>
                    <mainClass>io.weli.javafx.HelloWorld</mainClass>
                </configuration>
            </plugin>
        </plugins>
    </build>
</project>
